--- a/Exchange Rate Calculator/style.css
+++ b/Exchange Rate Calculator/style.css
@@ -69,3 +69,12 @@ input:focus, select:focus, button:focus{
     font-size: 16px;
     padding: 0 12px;
 }
+
+.all-currencies{
+    margin-top: 5%;
+    border: 1px solid gray;
+    padding: 10px 5px 10px 10px;
+    border-radius: 5px;
+    overflow: auto;
+    height: 150px;
+}
